tests/baselines/reference/moduleMemberMissingErrorIsRelative.errors.txt
folder/bar.ts(1,9): error TS2305: Module '"./foo"' has no exported member 'nosuch'.


==== folder/foo.ts (0 errors) ====
    export {};
==== folder/bar.ts (1 errors) ====
    import {nosuch} from './foo';
            ~~~~~~
!!! error TS2305: Module '"./foo"' has no exported member 'nosuch'.